<resources>
    <string name="app_name">Arklens</string>
    <string name="title_map">Map</string>
    <string name="title_characters">Characters</string>
    <string name="title_dice">Dice</string>
    <string name="title_character">Character</string>
    <string name="race_name">Раса</string>
    <string name="class_name">Роль</string>
    <string name="name">Имя</string>
    <string name="picture">picture</string>
    <string name="icon">icon</string>
    <string name="roll_button_text">Бросить кубик</string>
    <string name="roll">Roll</string>
    <string name="update">update</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="alignment">Мировоззрение</string>
    <string name="history">История</string>
    <string name="Race">Раса</string>
    <string name="characteristic">Характеристики</string>
    <string name="stats">Навыки</string>
    <string name="skills">Скилы</string>
    <string name="inventory">Инвентарь</string>
    <string name="strength">сила</string>
    <string name="dexterity">Ловкость</string>
</resources>