<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.arklens.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.example.arklens.ui.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters" />

    <fragment
        android:id="@+id/navigation_dice"
        android:name="com.example.arklens.ui.die.DieFragment"
        android:label="@string/title_dice"
        tools:layout="@layout/fragment_die" />

    <fragment
        android:id="@+id/navigation_full_character"
        android:name="com.example.arklens.ui.full_character.FullCharacterFragment"
        android:label="@string/title_character"
        tools:layout="@layout/full_character" />
</navigation>