<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/recycle_element_margin">

    <com.google.android.material.card.MaterialCardView
        app:strokeWidth="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/profile_radius"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#e6e6e6"
            android:padding="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/icon"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/race"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/race_name"
                android:textAlignment="viewStart"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/class_name"
                android:textAlignment="viewStart"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/race"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:maxHeight="@dimen/image_size"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/character_icon"
                android:contentDescription="@string/picture" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
